[gd_scene load_steps=7 format=3 uid="uid://dklv866qo11ma"]

[ext_resource type="Script" uid="uid://521np28kup16" path="res://스테이지1/big_explosion.gd" id="1_q7epf"]
[ext_resource type="Texture2D" uid="uid://dd1ba8gsppmlc" path="res://스테이지1/tank_explosion2.png" id="2_m5xho"]
[ext_resource type="Texture2D" uid="uid://ddmk28acrgfmq" path="res://스테이지1/tank_explosion3.png" id="3_kmxf7"]
[ext_resource type="Texture2D" uid="uid://dxpeesy1w57gm" path="res://스테이지1/tank_explosion4.png" id="4_l04k4"]

[sub_resource type="SpriteFrames" id="SpriteFrames_m5xho"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_m5xho")
}, {
"duration": 1.0,
"texture": ExtResource("3_kmxf7")
}, {
"duration": 1.0,
"texture": ExtResource("4_l04k4")
}],
"loop": false,
"name": &"explode",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 74.330345

[node name="BigExplosion" type="Node2D"]
z_index = 10
script = ExtResource("1_q7epf")

[node name="AnimatedExplosion" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_m5xho")
animation = &"explode"

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
scale = Vector2(0.6659513, 0.63917726)
shape = SubResource("CircleShape2D_1")
